# autoresearch

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.agents/skills/autoresearch/: SKILL.md
.agents/skills/autoresearch/agents/: openai.yaml
.circleci/: config.yml
project/: __init__.py
project/research/: __init__.py  codex_notifications.py  runtime.py  wake_context.py
research/studies/: example.yaml
scripts/: research.py
tests/: test_codex_notifications.py  test_research_cli.py  test_research_runtime.py  test_version.py  test_wake_context.py
