[build-system]
requires = [
    "hatchling==1.31.0",
    "hatch-vcs==0.5.0",
]
build-backend = "hatchling.build"

[project]
name = "python-template"
description = ""
requires-python = ">=3.12"
authors = [
    { name = "Scott Chase Waggener", email = "chase.waggener@icloud.com" },
]
dependencies = [
    "filelock==3.31.1",
    "pyyaml==6.0.3",
    "websockets==16.1.1",
]
readme = "README.md"
dynamic = [
    "version",
]

[dependency-groups]
dev = [
    "basedpyright==1.39.9",
    "pip-audit==2.10.1",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
    "ruff==0.15.22",
]

[project.license]
text = "Apache"

[project.optional-dependencies]

[tool.basedpyright]
include = [
    "project",
    "scripts",
    "tests",
]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.pytest_cache",
    "**/_version.py",
]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "standard"

[tool.coverage.run]
branch = true
source = [
    "project",
]
omit = [
    "project/_version.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "project/_version.py",
]

[tool.ruff.lint]
select = [
    "B",
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "RUF",
    "SIM",
    "UP",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
markers = [
    "ci_skip",
]
filterwarnings = []

[tool.uv]
required-version = "==0.11.28"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "project/_version.py"

# Set to true to allow installing git dependencies
[tool.hatch.metadata]
allow-direct-references = false
